# ZCU-FAV

./: .gitignore  README.md
KIV-BIT/: README.md  example.bat
KIV-BIT/CV/: pom.xml
KIV-BIT/SP/: .gitignore  README.md  build.gradle  (+1 more)
KIV-DB2/: README.md
KIV-DS/: .gitignore  README.md
KIV-PC/: README.md
KIV-PIA/: README.md
KIV-PPA1/: README.md
KIV-PPA2/: README.md
KIV-PPR/: README.md
KIV-PRO/: README.md
KIV-PSI/: README.md
KIV-PT/: README.md
KIV-TI/: README.md
KIV-UIR/: README.md
KIV-UPG/: README.md
KIV-UPS/: README.md
KIV-VSS/: .gitignore  README.md
KIV-WEB/: README.md
KIV-ZOS/SP/: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  test.sh
KIV-ZOS/SP/doc/: kiv-zos-sp.tex
KIV-ZOS/SP/src/main/c/: commands.c  commands.h  io.c  io.h  main.c  repl.c  repl.h  utils.c  utils.h  vfs-bitmap.c  vfs-bitmap.h  vfs-boot-record.c  vfs-boot-record.h  vfs-mft.c  vfs-mft.h  vfs-module-allocation.c  vfs-module-allocation.h  vfs-module-consistency.c  vfs-module-consistency.h  vfs-module-defragmentation.c  vfs-module-defragmentation.h  vfs-module-find.c  vfs-module-find.h  vfs-module-utils.c  vfs-module-utils.h  vfs-module-validation.c  vfs-module-validation.h  vfs.c  vfs.h
KIV-ZOS/SP/src/test/bash/: large-test.sh  test-cp.sh  test-defragment-1.sh  test-defragment-2.sh  test-defragment-3.sh  test-dir-tree.sh  test-flat-dirs.sh  test-flat-empty-file.sh  test-flat-fragments.sh  test-flat-more-mft-items.sh  test-flat-no-fragments.sh  test-flat-random-data.sh  test-load.sh  test-paths-in-commands.sh  test-reallocate.sh
KIV-ZSWI/: README.md
(+903 files in other folders)
